Trying to fix animation glitch on iPhone

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 #app {
+  background-color: rebeccapurple;
   width: 100vw;
   height: 100vh;
 }
